============
Evisum 0.6.3
============

  * NOTHING YET.

============
Evisum 0.6.2
============

  * Remove horrible desktop files.
  * Update README use markdown.
  * Allow parent process selection from process view.
  * Fix disk usage CPU usage edge case.
  * Update meson to remove deprecated use.
  * Debugging terminal fallback fix.
  * Don't stretch process list fields unnecessarily.
  * Remove show/hide scrollbar option.
  * Bump up config version (will reinitialise).

============
Evisum 0.6.1
============

  * Fix reporting of video RAM usage on Linux.
  * Fix a horrible bug rendering in process view.
    Thanks for finding that raster :)
  * Fix parsing of command arguments edge case.
  * Remove unused code.
  * Revert back to the original icon.

============
Evisum 0.6.0
============

  * God knows. Carsten did a release. :)

Evisum 0.5.13
=============

  * Fix small bug.
  * Translations by maxerba.

=============
Evisum 0.5.12
=============

  * Improve scrolling behaviour.
  * Add theme file.
  * Minor performance improvements.
  * Add a basic network overview tool.
  * Add some more fields to process view.
  * Process list fields selectable (right click field headers).
  * Improve scrolling performance.
  * Add small gadgets to the status bar (accurate in menu).
  * Add some useless effects :)
  * Fix leak.
  * Load manpages in separate thread (no blocking with LARGE docs).
  * Fix search bug.

=============
Evisum 0.5.11
=============

 * Improve layout of process explorer.
 * Consisent UI element sizing.
 * Some minor visual improvements.
 * Removing some leftover attrocity code.
 * Add window alpha to the process explorer.
 * Show CPU usage over multiple cores in process explorer.
 * Add time on CPU field (FreeBSD reports differently depending
   on the query), they are both accurate.
 * Add a status bar.
 * Resolve some rare-case minor string things from sysfs parsing.

=============
Evisum 0.5.10
=============
