@@ -1,0 +1,56 @@
+#include "evisum_ui_colors.h"
+#include "config.h"
+
+unsigned int cpu_colormap[256];
+unsigned int freq_colormap[256];
+unsigned int temp_colormap[256];
+
+static void
+_evisum_ui_colors_init(const Color_Point *col_in, unsigned int n, unsigned int *col)
+{
+   unsigned int pos, interp, val, dist, d;
+   unsigned int a, r, g, b;
+   unsigned int a1, r1, g1, b1, v1;
+   unsigned int a2, r2, g2, b2, v2;
+
+   // wal colormap_in until colormap table is full
+   for (pos = 0, val = 0; pos < n; pos++)
+     {
+        // get first color and value position
+        v1 = col_in[pos].val;
+        a1 = AVAL(col_in[pos].color);
+        r1 = RVAL(col_in[pos].color);
+        g1 = GVAL(col_in[pos].color);
+        b1 = BVAL(col_in[pos].color);
+        // get second color and valuje position
+        v2 = col_in[pos + 1].val;
+        a2 = AVAL(col_in[pos + 1].color);
+        r2 = RVAL(col_in[pos + 1].color);
+        g2 = GVAL(col_in[pos + 1].color);
+        b2 = BVAL(col_in[pos + 1].color);
+        // get distance between values (how many entires to fill)
+        dist = v2 - v1;
+        // walk over the span of colors from point a to point b
+        for (interp = v1; interp < v2; interp++)
+          {
+             // distance from starting point
+             d = interp - v1;
+             // calculate linear interpolation between start and given d
+             a = ((d * a2) + ((dist - d) * a1)) / dist;
+             r = ((d * r2) + ((dist - d) * r1)) / dist;
+             g = ((d * g2) + ((dist - d) * g1)) / dist;
+             b = ((d * b2) + ((dist - d) * b1)) / dist;
+             // write out resulting color value
+             col[val] = ARGB(a, r, g, b);
+             val++;
+          }
+     }
+}
+
+void evisum_ui_colors_init(void)
+{
+    _evisum_ui_colors_init(cpu_colormap_in, COLOR_CPU_NUM, cpu_colormap);
+    _evisum_ui_colors_init(freq_colormap_in, COLOR_FREQ_NUM, freq_colormap);
+    _evisum_ui_colors_init(temp_colormap_in, COLOR_TEMP_NUM, temp_colormap);
+}
+
